--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "url": "https://github.com/lokesh/color-thief-site.git"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-watch": "^0.5.3",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-ftp-deploy": "^0.1.10",
     "grunt-highlight": "0.0.1",
-    "grunt-html": "^4.0.3",
+    "grunt-html": "^8.0.2",
     "grunt-sass": "^1.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "mustache": "^2.2.1"
   }
 }
