--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "ftp-deploy": "^2.3.3",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "node-fetch": "^2.6.0"
   },
   "private": true,
   "licenses": [
