--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "ftp-deploy": "^2.3.3",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.3",
     "node-fetch": "^2.6.0"
   },
   "private": true,
@@ -22,5 +22,8 @@
   "scripts": {
     "dev": "http-server",
     "deploy": "node ./build/deploy.js"
+  },
+  "dependencies": {
+    "colorthief": "^2.3.2"
   }
 }
