--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "deploy": "node ./build/deploy.js"
   },
   "dependencies": {
-    "colorthief": "^2.3.2"
+    "colorthief": "^2.3.2",
+    "jquery": "^3.5.1",
+    "mustache": "^4.0.1"
   }
 }
