--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "last 1 Chrome version"
   ],
   "devDependencies": {
-    "ftp-deploy": "^2.3.8",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sftp-upload": "^1.0.2"
   }
 }
