--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "last 1 Chrome version"
   ],
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "parcel-bundler": "^1.12.4",
-    "sftp-upload": "^1.0.2"
+    "ssh2-sftp-client": "^5.3.1"
   }
 }
